Error al añadir el servicio ResidentesService

--- a/src/AdminApp/Pages/FetchData.razor
+++ b/src/AdminApp/Pages/FetchData.razor
@@ -7,7 +7,7 @@
 
 <h1>Weather forecast</h1>
 
-<AuthorizeView  Roles="TestRole">
+<AuthorizeView>
 <p>You can only see this if you're an admin or superuser.</p>
 
 <p>This component demonstrates fetching data from a service.</p>
