--- a/src/AdminApp/_Imports.razor
+++ b/src/AdminApp/_Imports.razor
@@ -7,3 +7,5 @@
 @using Microsoft.JSInterop
 @using AdminApp
 @using AdminApp.Shared
+@using IdentityServerAspNetIdentity.Models
+@using IdentityServerAspNetIdentity.Data.Residentes
