--- a/src/AdminApp/_Imports.razor
+++ b/src/AdminApp/_Imports.razor
@@ -9,3 +9,7 @@
 @using AdminApp.Shared
 @using IdentityServerAspNetIdentity.Models
 @using IdentityServerAspNetIdentity.Data.Residentes
+@using AdminApp.Data
+@using Blazored
+@using Blazored.Modal
+@using Blazored.Modal.Services
