--- a/src/AdminApp/Pages/_Host.cshtml
+++ b/src/AdminApp/Pages/_Host.cshtml
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="_content/Blazored.Modal/blazored-modal.css" rel="stylesheet" />
+    <link href="https://cdn.syncfusion.com/ej2/17.3.29/bootstrap4.css" rel="stylesheet" />
+    <script src="https://cdn.syncfusion.com/ej2/17.3.29/dist/ej2.min.js"></script>
+    <script src="https://cdn.syncfusion.com/ej2/17.3.29/dist/ejs.interop.min.js"></script>
 </head>
 <body>
     <app>
