--- a/src/AdminApp/_Imports.razor
+++ b/src/AdminApp/_Imports.razor
@@ -13,3 +13,7 @@
 @using Blazored
 @using Blazored.Modal
 @using Blazored.Modal.Services
+@using Syncfusion.EJ2.Blazor
+@using Syncfusion.EJ2.Blazor.DropDowns
+@using Syncfusion.EJ2.Blazor.Inputs;
+
